# squash

./: .gitignore  LICENSE  README.md  pyproject.toml
squash/: cli.py
src/squash/: cli.py
